Release 0.1.1 (pending)
==========================

- Use atomics for ring buffer implementation
- Use Format string constants for stream types

Release 0.1.0 (2016-09-01)
==========================

- Initial release of Soapy Airspy support module