@@ -1,6 +1,7 @@
 Release 0.1.1 (pending)
 ==========================
 
+- Support native AIRSPY_SAMPLE_INT16_IQ format
 - Use atomics for ring buffer implementation
 - Use Format string constants for stream types
 
